--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,9 @@ test/
 testing/
 testing.py
 
+# Local run instruments
+botStart.bat
+
 # PyCharm
 #  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
