--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,8 @@ testing.py
 # Local run instruments
 botStart.bat
 handlers/algorithmData.json
+#tools/
+#update.bat
 
 # PyCharm
 #  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
@@ -159,3 +161,4 @@ handlers/algorithmData.json
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+handlers/debugger.py
